[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
bdwgc-alloc = "0.6.11"
build-info = "0.0.42"
compiler_lib = { path = "../compiler_lib" }
escape-bytes = "0.1.1"
im-rc = "15.1"
indicatif = "0.18"
num-bigint = "0.4"
num = "0.4"
rustc-hash = "2.1"

[build-dependencies]
build-info-build = "0.0.42"
